--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <body ng-controller="StoreController as store">
     <ul class="list-group">
       <li class="list-group-item" ng-repeat="product in store.products">
-        <h3>
-          {{product.name}}
-          <em class="pull-right">{{product.price | currency}}</em>
+        <h3 ng-include="'product-title.html'">
         </h3>
         <img ng-src="{{product.images[0].full}}"/>
 
