--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
+  <div ng-controller="StoreController as store">
+    <h1>{{store.product.name}}</h1>
+    <h2>{{store.product.price}}</h2>
+    <p>{{store.product.description}}</p>
+  </div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
-  <p>{{"hello" + " you"}}</p>
 </body>
 </html>
