--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
 </head>
-<body>
-  <div ng-controller="StoreController as store">
-    <h1>{{store.product.name}}</h1>
-    <h2>{{store.product.price}}</h2>
-    <p>{{store.product.description}}</p>
+<body ng-controller="StoreController as store">
+  <div ng-repeat="product in store.products">
+    <h1>{{product.name}}</h1>
+    <h2>{{product.price}}</h2>
+    <p>{{product.description}}</p>
+    <button ng-show="product.canPurchase">Add to Cart</button>
   </div>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.2/angular.min.js"></script>
   <script type="text/javascript" src="app.js"></script>
